Cache tag thumbnails - add a cache (actually it is a QMap) to AlbumThumbnailLoader - add a method to SyncJob to load icon for a TAlbum, using the AlbumThumbnailLoader - use this in TagPopupMenu

BUG: 134013

svn path=/trunk/extragear/graphics/digikam/; revision=585276